--- a/index.html
+++ b/index.html
@@ -4,11 +4,85 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>John Doe's portfolio</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
+  <header class="header">
+    <div class="container">
+      <div class="header-logo">John</div>
+      <nav class="header-nav">
+        <ul>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Login</a></li>
+          <li><button>btn</button></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section class="hero">
+      <div class="container">
+        <div class="hero-profile">
+          <div class="hero-photo">
+            <img src="img/human-photo.jpg" alt="Person's photo" width="205" height="205">
+          </div>
+          <div class="hero-profile-info">
+            <p class="hero-name">John Doe</p>
+            <p>Frontend Developer</p>
+            <ul class="hero-social-links">
+              <li><a href="#"><img src="img/github.svg" alt=""></a></li>
+              <li><a href="#"><img src="img/twitter.svg" alt=""></a></li>
+              <li><a href="#"><img src="img/linkedin.svg" alt=""></a></li>
+              <li><a href="#"><img src="img/youtube.svg" alt=""></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="hero-experience">
+          <ul class="hero-experience-list">
+            <li class="hero-experience-item"><span>7</span>Years of work experience</li>
+            <li class="hero-experience-item"><span>50+</span>Completed projects</li>
+            <li class="hero-experience-item"><span>20+</span>Satisfied customers</li>
+          </ul>
+        </div>
+        <div class="hero-buttons">
+          <a href="#">Download CV</a>
+          <a href="#">Contact me</a>
+        </div>
+      </div>
+    </section>
+    <section class="portfolio">
+      <div class="container">
+        <h2 class="section-title">Portfolio</h2>
+        <ul class="portfolio-list">
+          <li><img src="img/portfolio-1.jpg" alt="Portfolio 1" width="380" height="226"></li>
+          <li><img src="img/portfolio-2.jpg" alt="Portfolio 2" width="380" height="226"></li>
+          <li><img src="img/portfolio-3.jpg" alt="Portfolio 3" width="380" height="226"></li>
+          <li><img src="img/portfolio-4.jpg" alt="Portfolio 4" width="380" height="226"></li>
+          <li><img src="img/portfolio-5.jpg" alt="Portfolio 5" width="380" height="226"></li>
+          <li><img src="img/portfolio-6.jpg" alt="Portfolio 6" width="380" height="226"></li>
+        </ul>
+      </div>
+    </section>
+    <section class="about-me">
+      <div class="container">
+        <h2 class="section-title">About Me</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quod nostrum repudiandae voluptatum facilis
+          itaque odio
+          sapiente impedit consequatur cumque, ipsa at tempore omnis ea animi non quibusdam doloremque corrupti sit.
+          Deserunt
+          dolores recusandae quam error! Vero maiores repudiandae delectus fugiat, eaque rem nihil pariatur temporibus
+          mollitia
+          incidunt? Culpa dignissimos error eum aspernatur nesciunt et temporibus voluptate animi natus qui!</p>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="container">
+      <p>© John Doe. 2025 All rigths reserved</p>
+    </div>
+  </footer>
 </body>
 
 </html>
