--- a/blog.html
+++ b/blog.html
@@ -17,14 +17,14 @@
   <header class="header clear">
     <div class="container">
       <div class="header-logo">
-        <a href="/index.html">John</a>
+        <a href="index.html">John</a>
       </div>
       <nav class="header-nav">
         <ul class="header-nav-list">
           <li><a href="blog.html">Blog</a></li>
           <li><a href="#">Login</a></li>
           <li><button>
-              <img src="/img/btn-change-theme.svg" alt="change button">
+              <img src="img/btn-change-theme.svg" alt="change button">
             </button></li>
         </ul>
       </nav>
@@ -46,8 +46,8 @@
             stupidity of the group of people he was talking to made him change his mind.</p>
           <div class="clear">
             <div class="article-likes">
-              <p><img src="/img/likesvg.svg" alt="like">387</p>
-              <p><img src="/img/dislike.svg" alt="dislike">54</p>
+              <p><img src="img/likesvg.svg" alt="like">387</p>
+              <p><img src="img/dislike.svg" alt="dislike">54</p>
             </div>
             <div class="article-views">Views: 305</div>
           </div>
@@ -65,8 +65,8 @@
             stupidity of the group of people he was talking to made him change his mind.</p>
           <div class="clear">
             <div class="article-likes">
-              <p><img src="/img/likesvg.svg" alt="like">387</p>
-              <p><img src="/img/dislike.svg" alt="dislike">54</p>
+              <p><img src="img/likesvg.svg" alt="like">387</p>
+              <p><img src="img/dislike.svg" alt="dislike">54</p>
             </div>
             <div class="article-views">Views: 305</div>
           </div>
@@ -84,8 +84,8 @@
             stupidity of the group of people he was talking to made him change his mind.</p>
           <div class="clear">
             <div class="article-likes">
-              <p><img src="/img/likesvg.svg" alt="like">387</p>
-              <p><img src="/img/dislike.svg" alt="dislike">54</p>
+              <p><img src="img/likesvg.svg" alt="like">387</p>
+              <p><img src="img/dislike.svg" alt="dislike">54</p>
             </div>
             <div class="article-views">Views: 305</div>
           </div>
