--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <nav class="header-nav">
         <ul class="header-nav-list">
-          <li><a href="blog/blog.html">Blog</a></li>
+          <li><a href="blog.html">Blog</a></li>
           <li><a href="#">Login</a></li>
           <li><button>
               <img src="img/btn-change-theme.svg" alt="change button">
